airflow_docker/logs/dag_id=dag_etl_date/run_id=scheduled__2023-04-27T00:00:00+00:00/task_id=create_nds_tables_if_not_exists/attempt=1.log
[2023-05-02 15:03:24,912] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: dag_etl_date.create_nds_tables_if_not_exists scheduled__2023-04-27T00:00:00+00:00 [queued]>
[2023-05-02 15:03:25,392] {taskinstance.py:1159} INFO - Dependencies all met for <TaskInstance: dag_etl_date.create_nds_tables_if_not_exists scheduled__2023-04-27T00:00:00+00:00 [queued]>
[2023-05-02 15:03:25,409] {taskinstance.py:1356} INFO - 
--------------------------------------------------------------------------------
[2023-05-02 15:03:25,410] {taskinstance.py:1357} INFO - Starting attempt 1 of 6
[2023-05-02 15:03:25,413] {taskinstance.py:1358} INFO - 
--------------------------------------------------------------------------------
[2023-05-02 15:03:26,547] {taskinstance.py:1377} INFO - Executing <Task(PostgresOperator): create_nds_tables_if_not_exists> on 2023-04-27 00:00:00+00:00
[2023-05-02 15:03:26,614] {standard_task_runner.py:52} INFO - Started process 439 to run task
[2023-05-02 15:03:26,783] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'dag_etl_date', 'create_nds_tables_if_not_exists', 'scheduled__2023-04-27T00:00:00+00:00', '--job-id', '616', '--raw', '--subdir', 'DAGS_FOLDER/dag_etl_taskflow_date.py', '--cfg-path', '/tmp/tmpkwweeik_', '--error-file', '/tmp/tmpq9nyw00k']
[2023-05-02 15:03:26,808] {standard_task_runner.py:80} INFO - Job 616: Subtask create_nds_tables_if_not_exists
[2023-05-02 15:03:29,566] {task_command.py:370} INFO - Running <TaskInstance: dag_etl_date.create_nds_tables_if_not_exists scheduled__2023-04-27T00:00:00+00:00 [running]> on host 295d97741f96
[2023-05-02 15:03:33,616] {taskinstance.py:1571} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Victor
AIRFLOW_CTX_DAG_ID=dag_etl_date
AIRFLOW_CTX_TASK_ID=create_nds_tables_if_not_exists
AIRFLOW_CTX_EXECUTION_DATE=2023-04-27T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-04-27T00:00:00+00:00
[2023-05-02 15:03:33,926] {base.py:68} INFO - Using connection ID 'postgres_conn' for task execution.
[2023-05-02 15:03:33,992] {dbapi.py:213} INFO - Running statement: 
            CREATE SCHEMA IF NOT EXISTS dds;
            CREATE SCHEMA IF NOT EXISTS nds;
    
            SET search_path TO dds;        
            
            --// создаем таблицу с ветками //--
            CREATE TABLE IF NOT EXISTS dim_branch(
            id SERIAL PRIMARY KEY,
            branch VARCHAR(100) NOT NULL);
            
            --// создаем таблицу с городами //--
            CREATE TABLE IF NOT EXISTS dim_city(
            id SERIAL PRIMARY KEY,
            city VARCHAR(100) NOT NULL);
            
            --// создаем таблицу с типами клиентов //--
            CREATE TABLE IF NOT EXISTS dim_customer_type(
            id SERIAL PRIMARY KEY,
            customer_type VARCHAR(200) NOT NULL);
            
            --// создаем таблицу с гендерами //--
            CREATE TABLE IF NOT EXISTS dim_gender(
            id SERIAL PRIMARY KEY,
            gender VARCHAR(200) NOT NULL);
            
            --// создаем таблицу с продуктовыми линейками //--
            CREATE TABLE IF NOT EXISTS dim_product_line(
            id SERIAL PRIMARY KEY,
            product_line VARCHAR(200) NOT NULL);
            
            --// создаем таблицу с видами оплат //--
            CREATE TABLE IF NOT EXISTS dim_payment(
            id SERIAL PRIMARY KEY,
            payment VARCHAR(100) NOT NULL);
            
            --// создаем таблицу с датами //--
            CREATE TABLE IF NOT EXISTS dim_date AS
            WITH cte1 AS (
                SELECT dd::date AS dt -- создаем серию из дат с интервалом в 1 день
                FROM generate_series('2019-01-01'::timestamp,'2030-01-01'::timestamp,'1 day'::interval) dd)
            SELECT
                dt AS date,
                date_part('week', dt)::int AS week_of_year,
                date_trunc('week', dt)::date AS week_start,
                date_part('isodow', dt)::int AS day_of_week,
                date_part('month', dt)::int AS month_number,
                to_char(dt::timestamp, 'Month') AS month_name,
                extract(quarter from dt) AS quarter,
                date_part('isoyear', dt)::int AS year
            FROM cte1;
            
            
            --//  создаем таблицу с временем  //--
            CREATE TABLE IF NOT EXISTS dim_time AS
            WITH cte1 AS (
                SELECT tt::time AS t -- создаем серию из дат с интервалом в 1 день
                FROM generate_series(current_date, current_date + '1 day - 1 second'::interval,'1 minute') tt),
            cte2 AS (SELECT
                t AS time
            FROM cte1 ORDER BY t)
            SELECT time,
                   case
                       when (time >= '00:00:00'::time AND time < '06:00:00'::time) then 'ningt'
                       when (time >= '06:00:00'::time AND time < '11:00:00'::time) then 'morning'
                       when (time >= '11:00:00'::time AND time < '17:00:00'::time) then 'noon'
                       when (time >= '17:00:00'::time AND time < '22:00:00'::time) then 'evening'
                       when (time >= '22:00:00'::time AND time < '24:00:00'::time) then 'ningt'
                   end AS date_part
            from cte2
           
            --// создаем таблицу с фактами //--       
            CREATE TABLE IF NOT EXISTS fact_sales(
            invoice_id VARCHAR(15) PRIMARY KEY,
            branch INT NOT NULL REFERENCES dim_branch(id),
            city INT NOT NULL REFERENCES dim_city(id),
            customer_type INT NOT NULL REFERENCES dim_customer_type(id),
            gender INT NOT NULL REFERENCES dim_gender(id),
            product_line INT NOT NULL REFERENCES dim_product_line(id),
            unit_price DOUBLE PRECISION,
            quantity DOUBLE PRECISION,
            "tax_5%" DOUBLE PRECISION,
            total DOUBLE PRECISION,
            date DATE NOT NULL REFERENCES dim_date(date),
            time TIME NOT NULL REFEREMCES dim_time(time),
            payment INT NOT NULL REFERENCES dim_payment(id),
            cogs DOUBLE PRECISION,
            gross_margin_percentage DOUBLE PRECISION,
            gross_income DOUBLE PRECISION,
            rating DOUBLE PRECISION);        
        , parameters: None
[2023-05-02 15:03:34,029] {taskinstance.py:1889} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 92, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 193, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 217, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "CREATE"
LINE 73:             CREATE TABLE IF NOT EXISTS fact_sales(
                     ^

[2023-05-02 15:03:34,352] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=dag_etl_date, task_id=create_nds_tables_if_not_exists, execution_date=20230427T000000, start_date=20230502T150324, end_date=20230502T150334
[2023-05-02 15:03:37,522] {standard_task_runner.py:97} ERROR - Failed to execute job 616 for task create_nds_tables_if_not_exists (syntax error at or near "CREATE"
LINE 73:             CREATE TABLE IF NOT EXISTS fact_sales(
                     ^
; 439)
[2023-05-02 15:03:37,645] {local_task_job.py:156} INFO - Task exited with return code 1
[2023-05-02 15:03:38,590] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
